--- a/style/lottery.css
+++ b/style/lottery.css
@@ -18,6 +18,50 @@ body {
   width: 100%;
 }
 
+.lottery-head-img img.lottery-animation-text {
+  position: absolute;
+  z-index: 9;
+  top: 0;
+  -webkit-animation: mytop ease-in-out 2.3s infinite;
+          animation: mytop ease-in-out 2.3s infinite;
+}
+
+@-webkit-keyframes mydown {
+  40% {
+    bottom: 0.35rem;
+  }
+  100% {
+    bottom: 0;
+  }
+}
+
+@keyframes mydown {
+  40% {
+    bottom: 0.35rem;
+  }
+  100% {
+    bottom: 0;
+  }
+}
+
+@-webkit-keyframes mytop {
+  50% {
+    top: 0.5rem;
+  }
+  100% {
+    top: 0;
+  }
+}
+
+@keyframes mytop {
+  50% {
+    top: 0.5rem;
+  }
+  100% {
+    top: 0;
+  }
+}
+
 .prize-lotter {
   margin: 1rem auto;
   width: 17.3rem;
@@ -49,6 +93,128 @@ body {
   position: absolute;
   top: 0;
   border-radius: 0.4rem;
+}
+
+.ui-dialog-success {
+  background-image: url(../images/event-01-25/dailog-success-bg.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.ui-dialog-success .ui-dialog-close {
+  background-image: url(../images/event-01-25/btn-close-red.png) !important;
+}
+
+.ui-dialog-fail {
+  background-image: url(../images/event-01-25/dailog-fail-bg.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.ui-dialog-fail .ui-dialog-close {
+  background-image: url(../images/event-01-25/btn-close-black.png) !important;
+}
+
+#lottery_award_content {
+  font-size: 0.7rem;
+  line-height: 1.8;
+  padding-top: 40%;
+}
+
+.lottery-award-users {
+  margin: 0 auto;
+  width: 17.3rem;
+  overflow: hidden;
+}
+
+.lottery-award-users a {
+  display: inline-block;
+}
+
+.award-users-list {
+  overflow: hidden;
+  font-size: 0.75rem;
+  white-space: nowrap;
+}
+
+.award-users-list li {
+  display: inline-block;
+  padding-right: 0.8rem;
+}
+
+.event-rule-box {
+  background-image: url(../images/event-01-25/lottery-bottom-bg.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.event-container {
+  width: 80%;
+  padding: 2rem 0;
+  margin: 0 auto;
+  font-size: 0.75rem;
+  color: #474747;
+}
+
+.event-container h3 {
+  padding-bottom: 0.75rem;
+}
+
+.event-container p {
+  padding: 0.75rem 0;
+  line-height: 1.5;
+}
+
+.event-container h3 {
+  color: #f12b71;
+}
+
+.lottery-record-bg {
+  background-image: url(../images/event-01-25/lottery-record-bg.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin-top: 1rem;
+  min-height: 26.6rem;
+}
+
+.my-award-record {
+  padding-top: 1rem;
+  box-sizing: border-box;
+  width: 16.5rem;
+  margin: 0 auto;
+}
+
+.record-head {
+  font-size: 1rem;
+  color: #777;
+  border-bottom: 0.1rem solid #d1c0a5;
+}
+
+.record-head span {
+  text-align: center;
+  display: inline-block;
+  width: 49%;
+  padding: 0.5rem 0;
+}
+
+.record-list {
+  font-size: 0.75rem;
+  color: #474747;
+  padding-top: 0.5rem;
+}
+
+.record-list li {
+  padding: 0.5rem 0;
+}
+
+.record-list li span {
+  display: inline-block;
+  width: 49%;
+  text-align: center;
 }
 
 /*# sourceMappingURL=lottery.css.map */
